--- a/practice.html
+++ b/practice.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 
-  <head>
+  <sonohead>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>My First Site</title>
